[build-system]
requires = ["hatchling>=1.20.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/wkentaro/osam"

[project]
name = "osam"
description = "Get up and running vision foundational models locally."
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Kentaro Wada", email = "www.kentaro.wada@gmail.com" }]
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click",
  "gdown>=6.0.0",
  "imgviz>=2.0.0",
  "loguru",
  "onnxruntime>=1.23.2",
  # onnxruntime dropped cp310 wheels at 1.24, which is also the first release
  # with cp314 wheels; pin 3.10 below that boundary.
  "onnxruntime<1.24; python_version < '3.11'",
  "Pillow",
  "pydantic",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
serve = ["fastapi", "uvicorn"]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest-xdist>=3.6.1",
  "pytest>=8.3.4",
  "ruff==0.1.9",
  "twine>=6.1.0",
  "onnx>=1.17.0",
  "ty>=0.0.11",
  "ipython>=8.38.0",
  "taplo>=0.9.3",
  "mdformat>=1.0.0",
  "yamlfix>=1.19.1",
  "typos>=1.45.1",
  "pytest-cov>=7.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[project.scripts]
osam = "osam:__main__.cli"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
exclude = [".conda", ".git", "src"]

line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`), pycodestyle (`E`), isort (`I`).
select = ["E", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true
